# theta

./: .gitignore  .python-version  README.md  pyproject.toml  setup.py
theta/: README.md  __main__.py  __version__.py  requirements.txt
theta/cv/data/: __init__.py  coco_data.py
theta/examples/: Makefile.category_entities  Makefile.classification  Makefile.event_element  mlflow_test.py  run_category_entities.py  run_classification.py  run_event_element.py  task_entity_extraction.py  task_nlp.py  task_relation_extraction.py  task_sequence_classification.py
theta/examples/CLUENER/: cluener.ipynb
theta/examples/TNEWS/: tnews.ipynb
theta/examples/cluener/: Makefile  cluener.ipynb  run_cluener.py  task_cluener.py
theta/examples/o2o_reviews/: run_o2o_reviews.py
theta/losses/: dice_loss.py  focalloss.py
theta/modeling/: __init__.py  app.py  brat.py  common_args.py  dataset_ner.py  dataset_spo.py  glue_utils.py  ner_utils.py  spo_utils.py  token_utils.py  trainer.py  utils.py
theta/modeling/glue/: __init__.py  args.py  dataset.py  trainer.py
theta/modeling/ner/: __init__.py  args.py  dataset.py  trainer.py  utils.py
theta/modeling/ner_pn/: __init__.py  args.py  dataset.py  trainer.py
theta/nlp/: __init__.py  arguments.py  defaults.py  glue_utils.py  run_glue.py  run_utils.py  runner.py  tagging.py
theta/templates/: Makefile.ner_task  ner_params.py  ner_task.py  run_ner_task.py  theta_glue_init.sh  theta_init.sh  theta_spo_init.sh
theta/tutorials/: tokenizers.ipynb
theta/utils/: __init__.py  dict_utils.py  file_reader.py  ner_utils.py  utils.py
(+130 files in other folders)
